# tuxedo-control-nix

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  renovate.json  rustfmt.toml
.gitea/workflows/: ci.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/tuxedoio/: Cargo.toml
crates/tuxedoio/src/: lib.rs  sim.rs
crates/tuxedoio/tests/: model_matrix.rs
daemon/: Cargo.toml
daemon/src/: main.rs  profiles.rs
docs/: hardware-interface.md  model-gating.md  phase1-protocol.md  reverse-engineering-plan.md
gui/: Cargo.toml
gui/src/: curve_editor.rs  main.rs
nix/: module.nix  package.nix  vm-test.nix
prober/: Cargo.toml  README.md
prober/src/: main.rs
tui/: Cargo.toml
tui/src/: main.rs
