[package]
name = "tuxedo-gui"
version = "0.1.0"
edition = "2021"
description = "libadwaita GUI for TUXEDO Uniwill fan/performance control (talks to tuxedo-controld)"
license = "MIT"

[[bin]]
name = "tuxedo-gui"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
